force-app/main/default/objects/User/fields/abd_StartUrl__c.field-meta.xml
<CustomField>
    <fullName>abd_StartUrl__c</fullName>
    <defaultValue>"/dx-auth-home"</defaultValue>
    <description>Stores the start Url for the portal user logging in. Should not display on any layouts, system use only.</description>
    <label>StartUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>