force-app/main/default/objects/User/fields/MUSW__Step_Through__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Step_Through__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Step Through</label>
    <type>Checkbox</type>
</CustomField>