force-app/main/default/objects/User/fields/WSI_SQL_Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>WSI_SQL_Migration_ID__c</fullName>
    <externalId>true</externalId>
    <label>WSI SQL Migration ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>